.metadata/.plugins/org.eclipse.cdt.ui/p345.build.log
18:24:05 **** Build of configuration Debug for project p345 ****
make all 
Building file: ../src/p345.c
Invoking: Cygwin C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/p345.d" -MT"src/p345.d" -o "src/p345.o" "../src/p345.c"
../src/p345.c: In function 'main':
../src/p345.c:26:16: error: expected expression before ',' token
  print_ints(5, , "acbd", 79, 101, 32, 100) ;
                ^
../src/p345.c:27:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
src/subdir.mk:18: recipe for target 'src/p345.o' failed
make: *** [src/p345.o] Error 1

18:24:05 Build Finished (took 297ms)

